[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GUI/EscMenu.gd" type="Script" id=1]

[sub_resource type="VisualShader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="EscMenu" type="Control"]
material = SubResource( 2 )
margin_right = 1020.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.945098, 0.945098, 0.945098, 1 )
margin_left = 300.0
margin_top = 130.0
margin_right = 705.0
margin_bottom = 350.0

[node name="DisplayName" type="LineEdit" parent="Panel"]
margin_left = 70.0
margin_top = 30.0
margin_right = 340.0
margin_bottom = 54.0
caret_blink = true

[node name="ChangeName" type="Button" parent="Panel"]
margin_left = 90.0
margin_top = 80.0
margin_right = 316.0
margin_bottom = 127.0
text = "Change name"

[node name="QuitButton" type="Button" parent="Panel"]
margin_left = 90.0
margin_top = 150.0
margin_right = 316.0
margin_bottom = 197.0
text = "Quit"

[connection signal="text_changed" from="Panel/DisplayName" to="." method="_on_DisplayName_text_changed"]
[connection signal="pressed" from="Panel/ChangeName" to="." method="_on_ChangeName_pressed"]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_QuitButton_pressed"]
